# teste_ufpe

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py
backend/app/schemas/: lesson_plan_schema.py
backend/instance/: database.db
backend/migrations/versions/: 1c17f81460d8_initial_migration.py
backend/models/: __init__.py  lesson_plan.py
backend/routes/: lesson_plan_routes.py
backend/services/: ai_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ConfirmModal.jsx  LessonCard.jsx  LessonCardSkeleton.jsx  Navbar.jsx
frontend/src/pages/: CreateLesson.jsx  Home.jsx
instance/: database.db
migrations/versions/: e4278fa432a0_create_lesson_plans_table.py
