[project]
name = "teste-ufpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-marshmallow>=1.5.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=2.4.0",
    "google-generativeai>=0.8.6",
    "marshmallow>=4.3.0",
    "marshmallow-sqlalchemy>=1.5.0",
    "openai>=2.37.0",
    "pre-commit>=4.6.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
